# coding: utf-8
[metadata]
name = memeoverflow
version = 0.7.3
description = Simple framework for Twitter bots creating memes from Stack Exchange questions
long_description = file: description.rst
author = Ben Nuttall
author_email = ben@bennuttall.com
url = https://github.com/bennuttall/meme-overflow
project_urls =
    Source Code = https://github.com/bennuttall/meme-overflow
    Issue Tracker = https://github.com/bennuttall/meme-overflow/issues
keywords = twitter, stackoverflow, stackexchange, meme, imgflip
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Topic :: Games/Entertainment
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6
install_requires =
    setuptools
    requests
    twython
    logzero

[options.extras_require]
test =
    pytest
    coverage
    mock
    pylint
